--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,6 +1,8 @@
-torch==2.2.1
+torch==2.2.1 --index-url https://download.pytorch.org/whl/cpu
 ultralytics==8.1.0
-opencv-python==4.8.0.76
+opencv-python-headless==4.8.0.76
 streamlit==1.32.0
 scikit-learn==1.3.0
-numpy==1.24.0
+numpy==1.26.0
+pillow==10.0.1
+python-dotenv==1.0.0
