--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,8 +1,4 @@
---extra-index-url https://download.pytorch.org/whl/cpu
-torch==2.2.1+cpu
 ultralytics==8.1.0
-opencv-python-headless==4.8.0.76  # Version headless obligatoire
+opencv-python-headless==4.8.0.76
 streamlit==1.32.0
 numpy==1.26.0
-pillow==10.0.1
-libgl1
